Revert "fix(select): made select line height aligned with input"
Fixes to select had breaking changes with `$input-line-height: 28px !default;`

--- a/src/components/input/input.scss
+++ b/src/components/input/input.scss
@@ -2,14 +2,14 @@ $input-container-padding: 2px !default;
 
 $input-label-default-offset: 24px !default;
 $input-label-default-scale: 1.0 !default;
-$input-label-float-offset: 8px !default;
+$input-label-float-offset: 6px !default;
 $input-label-float-scale: 0.75 !default;
 
 $input-placeholder-offset: $input-label-default-offset !default;
 
 $input-border-width-default: 1px !default;
 $input-border-width-focused: 2px !default;
-$input-line-height: 28px !default;
+$input-line-height: 26px !default;
 $input-padding-top: 2px !default;
 
 $input-error-font-size: 12px !default;
