--- a/src/components/select/select.scss
+++ b/src/components/select/select.scss
@@ -1,4 +1,3 @@
-$select-label-height: 26px;
 $select-option-height: 48px;
 $select-option-padding: 16px;
 $select-container-padding: 16px;
@@ -102,7 +101,7 @@ md-select {
   position: relative;
   box-sizing: content-box;
   min-width: 8 * $baseline-grid;
-  min-height: $select-label-height + 2px;
+  min-height: 26px;
   flex-grow: 1;
 
   .md-text {
@@ -115,7 +114,6 @@ md-select {
     white-space: nowrap;
     overflow: hidden;
     transform: translate3d(0, 2px, 0);
-    height: $select-label-height;
   }
 
   .md-select-icon {
@@ -131,7 +129,7 @@ md-select {
     display: block;
     content: '\25BC';
     position: relative;
-    top: -1px;
+    top: 2px;
     speak: none;
     transform: scaleY(0.6) scaleX(1);
   }
